// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paper renders without crashing, matches snapshot 1`] = `
body #PickUpUI .j0 {
  width: 100%;
  border: 1px solid #EAEAEB;
  height: auto;
  display: block;
  position: relative;
  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.08);
  border-radius: 12px;
}

body #PickUpUI .j1 {
  padding: 16px;
  padding-top: 16px;
}

<div>
  <div
    id="PickUpUI"
  >
    <div
      class="j0 j1"
      data-testid="paper"
    >
      Hello, World
    </div>
  </div>
</div>
`;

exports[`Paper with logo heading renders without crashing, matches snapshot 1`] = `
body #PickUpUI .j0 {
  width: 100%;
  border: 1px solid #EAEAEB;
  height: auto;
  display: block;
  position: relative;
  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.08);
  border-radius: 12px;
}

body #PickUpUI .j1 {
  padding: 16px;
  padding-top: 68px;
}

body #PickUpUI .j2 {
  top: 0;
  left: 0;
  width: 100%;
  height: 52px;
  display: flex;
  position: absolute;
  text-align: center;
  align-items: center;
  justify-content: center;
  background-color: #7A60FF;
  border-top-left-radius: 12px;
  border-top-right-radius: 12px;
}

<div>
  <div
    id="PickUpUI"
  >
    <div
      class="j0 j1"
      data-testid="paper"
    >
      <div
        class="j2"
      >
        <div>
          <img
            alt="PickUp"
            role="presentation"
            src="test-file-stub"
          />
        </div>
      </div>
      Hello, World
    </div>
  </div>
</div>
`;
